# readterm

./: Cargo.toml  LICENSE  README.md
examples/: dump_events.rs
src/: color.rs  core.rs  event.rs  lib.rs  scroll_buffer.rs
src/os/: default.rs  mod.rs  unix.rs
tests/: os.rs
tests/os/: default.rs
